--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Author URL: http://w3layouts.com
 				<div class="copyright-footer">
 					<div class="w3l-copy-right-left">
 						<ul class="social">
-							<li><a href="#"><span class="fa fa-facebook" aria-hidden="true"></span></a></li>
+					
 							<li><a href="#"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
-							<li><a href="#"><span class="fa fa-twitter" aria-hidden="true"></span></a></li>
+							<li><a href="https://x.com/ohanaonsol/"><span class="fa fa-twitter" aria-hidden="true"></span></a></li>
 							<li><a href="#"><span class="fa fa-google" aria-hidden="true"></span></a></li>
 							<li><a href="#"><span class="fa fa-github" aria-hidden="true"></span></a></li>
 						</ul>
